<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:layout_marginStart="@dimen/gap_large"
    android:layout_marginEnd="@dimen/gap_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/settingButton1"
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/gap_normal"
            android:paddingBottom="@dimen/gap_normal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/gap_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_big"
                    android:textFontWeight="600"
                    android:text="@string/show_notifications"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTwo"
                    android:text="@string/show_notifications_detail"/>
            </LinearLayout>
            <View
                android:layout_width="@dimen/icon_size_normal"
                android:layout_height="@dimen/icon_size_normal"
                android:background="@drawable/img_right"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/settingButton2"
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/gap_normal"
            android:paddingBottom="@dimen/gap_normal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/gap_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_big"
                    android:textFontWeight="600"
                    android:text="@string/notification_previews"/>
                <TextView
                    android:id="@+id/settingText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTwo"
                    android:text="@string/show_name_and_message"/>
            </LinearLayout>
            <View
                android:layout_width="@dimen/icon_size_normal"
                android:layout_height="@dimen/icon_size_normal"
                android:background="@drawable/img_right"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/gap_normal"
            android:paddingBottom="@dimen/gap_normal"
            android:textFontWeight="600"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/colorTwo"
            android:text="@string/actions_cap"/>
        <LinearLayout
            android:id="@+id/settingButton3"
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/gap_normal"
            android:paddingBottom="@dimen/gap_normal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/gap_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_big"
                    android:textFontWeight="600"
                    android:text="@string/button_1"/>
                <TextView
                    android:id="@+id/settingText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTwo"
                    android:text="@string/mark_read"/>
            </LinearLayout>
            <View
                android:layout_width="@dimen/icon_size_normal"
                android:layout_height="@dimen/icon_size_normal"
                android:background="@drawable/img_right"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/settingButton4"
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/gap_normal"
            android:paddingBottom="@dimen/gap_normal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/gap_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_big"
                    android:textFontWeight="600"
                    android:text="@string/button_1"/>
                <TextView
                    android:id="@+id/settingText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTwo"
                    android:text="@string/reply"/>
            </LinearLayout>
            <View
                android:layout_width="@dimen/icon_size_normal"
                android:layout_height="@dimen/icon_size_normal"
                android:background="@drawable/img_right"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/settingButton5"
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/gap_normal"
            android:paddingBottom="@dimen/gap_normal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/gap_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_big"
                    android:textFontWeight="600"
                    android:text="@string/button_1"/>
                <TextView
                    android:id="@+id/settingText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTwo"
                    android:text="@string/none"/>
            </LinearLayout>
            <View
                android:layout_width="@dimen/icon_size_normal"
                android:layout_height="@dimen/icon_size_normal"
                android:background="@drawable/img_right"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/gap_normal"
            android:paddingBottom="@dimen/gap_normal"
            android:textFontWeight="600"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/colorTwo"
            android:text="@string/popup_reply_cap"/>
        <LinearLayout
            android:id="@+id/settingButton6"
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/gap_normal"
            android:paddingBottom="@dimen/gap_normal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/gap_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_big"
                    android:textFontWeight="600"
                    android:text="@string/popup_reply"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTwo"
                    android:text="@string/popup_reply_detail"/>
            </LinearLayout>
            <View
                android:id="@+id/settingSwitch6"
                android:layout_width="@dimen/button_size_small"
                android:layout_height="@dimen/button_size_small"
                android:background="@drawable/img_switch_on"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/settingButton7"
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/gap_normal"
            android:paddingBottom="@dimen/gap_normal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/gap_large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_big"
                    android:textFontWeight="600"
                    android:text="@string/tap_to_dismiss"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorTwo"
                    android:text="@string/tap_to_dismiss"/>
            </LinearLayout>
            <View
                android:id="@+id/settingSwitch7"
                android:layout_width="@dimen/button_size_small"
                android:layout_height="@dimen/button_size_small"
                android:background="@drawable/img_switch_on"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>