<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LanguageActivity">

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:layout_marginStart="@dimen/gap_large"
        android:layout_marginEnd="@dimen/gap_large">

        <Button
            android:id="@+id/buttonNav"
            android:layout_marginEnd="@dimen/gap_normal"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/btn_nav"
            app:backgroundTint="@color/colorOne"
            android:padding="@dimen/gap_small"
            android:layout_width="@dimen/button_size_normal"
            android:layout_height="@dimen/button_size_normal"/>

        <TextView
            android:layout_toEndOf="@id/buttonNav"
            android:layout_centerVertical="true"
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/messaging"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/settingButton"
            android:layout_marginEnd="@dimen/gap_tiny"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/img_setting"
            app:backgroundTint="@color/colorOne"
            android:padding="@dimen/gap_small"
            android:layout_width="@dimen/button_size_normal"
            android:layout_height="@dimen/button_size_normal"/>
    </RelativeLayout>

    <EditText
        android:layout_below="@id/titleBar"
        android:layout_marginTop="@dimen/gap_small"
        android:layout_marginBottom="@dimen/gap_small"
        android:layout_marginStart="@dimen/gap_large"
        android:layout_marginEnd="@dimen/gap_large"
        android:paddingStart="@dimen/gap_big"
        android:paddingEnd="@dimen/gap_normal"
        android:id="@+id/searchBox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_input_box_round"
        android:drawablePadding="@dimen/gap_small"
        android:drawableStart="@drawable/ic_search"/>

    <HorizontalScrollView
        android:layout_below="@id/searchBox"
        android:id="@+id/tabBar"
        android:layout_marginStart="@dimen/gap_large"
        android:layout_marginEnd="@dimen/gap_large"
        android:paddingTop="@dimen/gap_big"
        android:paddingBottom="@dimen/gap_big"
        android:scrollbarSize="0dp"
        android:scrollbars="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/allTab">
            <RadioButton
                android:id="@+id/allTab"
                android:paddingStart="@dimen/gap_extra"
                android:paddingEnd="@dimen/gap_extra"
                android:layout_marginEnd="@dimen/gap_small"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_small"
                android:text="@string/all"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                android:textColor="@drawable/sel_tab_text"
                android:background="@drawable/bg_tab_item"
                android:gravity="center"
                android:button="@null"/>
            <RadioButton
                android:id="@+id/personalTab"
                android:paddingStart="@dimen/gap_extra"
                android:paddingEnd="@dimen/gap_extra"
                android:layout_marginStart="@dimen/gap_small"
                android:layout_marginEnd="@dimen/gap_small"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_small"
                android:text="@string/personal"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                android:textColor="@drawable/sel_tab_text"
                android:background="@drawable/bg_tab_item"
                android:gravity="center"
                android:button="@null"/>
            <RadioButton
                android:id="@+id/otpsTab"
                android:paddingStart="@dimen/gap_extra"
                android:paddingEnd="@dimen/gap_extra"
                android:layout_marginStart="@dimen/gap_small"
                android:layout_marginEnd="@dimen/gap_small"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_small"
                android:text="@string/otps"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                android:textColor="@drawable/sel_tab_text"
                android:background="@drawable/bg_tab_item"
                android:gravity="center"
                android:button="@null"/>
            <RadioButton
                android:id="@+id/offersTab"
                android:paddingStart="@dimen/gap_extra"
                android:paddingEnd="@dimen/gap_extra"
                android:layout_marginStart="@dimen/gap_small"
                android:layout_marginEnd="@dimen/gap_small"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_small"
                android:text="@string/offers"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                android:textColor="@drawable/sel_tab_text"
                android:background="@drawable/bg_tab_item"
                android:gravity="center"
                android:button="@null"/>
            <RadioButton
                android:id="@+id/transactionTab"
                android:paddingStart="@dimen/gap_large"
                android:paddingEnd="@dimen/gap_large"
                android:layout_marginStart="@dimen/gap_small"
                android:layout_marginEnd="@dimen/gap_small"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_small"
                android:text="@string/transaction"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold"
                android:textColor="@drawable/sel_tab_text"
                android:background="@drawable/bg_tab_item"
                android:gravity="center"
                android:button="@null"/>
        </RadioGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabBar"
        android:layout_marginTop="0dp"
        tools:listitem="@layout/item_message_group" />

    <Button
        android:id="@+id/startChatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/gap_large"
        android:layout_marginTop="@dimen/gap_large"
        android:layout_marginEnd="@dimen/gap_large"
        android:layout_marginBottom="@dimen/gap_large"
        android:background="@drawable/bg_chat_button"
        app:icon="@drawable/img_start_chat"
        app:iconTint="@color/white"
        app:iconSize="@dimen/icon_size_normal"
        android:text="@string/start_chat"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold" />

</RelativeLayout>